<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="mainViewModel"
            type="com.devinmartinolich.basemvvm.viewmodel.MainViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/loginBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:paddingBottom="16dp"
                    visibility="@{mainViewModel.showLoginBox}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" >

                    <TextView
                        android:id="@+id/usernameTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="24dp"
                        android:labelFor="@+id/usernameEdit"
                        android:text="@string/username"
                        android:textAppearance="@style/MyCardHeadingText"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <EditText
                        android:id="@+id/usernameEdit"
                        android:layout_width="0dp"
                        android:layout_height="42dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@={mainViewModel.username}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/usernameTitle" />

                    <TextView
                        android:id="@+id/forgotUser"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:textAlignment="textEnd"
                        android:textSize="12sp"
                        android:text="@string/forgot_username"
                        android:textColor="@color/colorAccent"
                        android:onClick="@{mainViewModel::navClicked}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/usernameEdit" />

                    <TextView
                        android:id="@+id/passwordTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:labelFor="@+id/passwordEdit"
                        android:text="@string/password"
                        android:textAppearance="@style/MyCardHeadingText"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/forgotUser" />

                    <EditText
                        android:id="@+id/passwordEdit"
                        android:layout_width="0dp"
                        android:layout_height="42dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:text="@={mainViewModel.password}"
                        android:inputType="textPassword"
                        android:imeOptions="actionDone"
                        android:onEditorAction="@{(view,actionId,event) -> mainViewModel.onEditorAction(view,actionId,event)}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/passwordTitle" />

                    <TextView
                        android:id="@+id/forgotPass"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:textAlignment="textEnd"
                        android:textSize="12sp"
                        android:text="@string/forgot_password"
                        android:textColor="@color/colorAccent"
                        android:onClick="@{mainViewModel::navClicked}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/passwordEdit" />

                    <Switch
                        android:id="@+id/rememberSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/rememberMe"
                        android:textColor="?android:attr/colorAccent"
                        android:theme="@style/MyMaterialThemeSwitch"
                        android:checked="@={mainViewModel.rememberUsername}"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/forgotPass"
                        tools:checked="true"
                        android:onCheckedChanged="@{(button, on) -> mainViewModel.onCheckedChangeRemember(on)}"/>

                    <Switch
                        android:id="@+id/fingerprintSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        visibility="@{mainViewModel.showFingerprintSwitch}"
                        android:text="@string/use_fingerprint"
                        android:textColor="?android:attr/colorAccent"
                        android:theme="@style/MyMaterialThemeSwitch"
                        android:checked="@={mainViewModel.fingerprintSwitch}"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rememberSwitch"
                        tools:checked="true"
                        android:onCheckedChanged="@{(button, bool) -> mainViewModel.onCheckedChangeFingerprint(bool)}"/>

                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="135dp"
                        android:layout_height="47dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="16dp"
                        android:onClick="@{() -> mainViewModel.loginClicked()}"
                        android:text="@string/btn_login"
                        android:textColor="#ffffff"
                        android:textStyle="bold"
                        android:background="#e05206"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/fingerprintSwitch"
                        tools:layout_editor_absoluteX="101dp" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/fingerprintNav"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        visibility="@{mainViewModel.showFingerprintNav}"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btnLogin">

<!--                        <ImageView-->
<!--                            android:id="@+id/fingerprintNavIcon"-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:layout_marginTop="16dp"-->
<!--                            android:contentDescription="@null"-->
<!--                            android:src="@drawable/iconfingerprint"-->
<!--                            android:onClick="@{() -> mainViewModel.loginFingerprint()}"-->
<!--                            app:layout_constraintLeft_toLeftOf="parent"-->
<!--                            app:layout_constraintTop_toTopOf="parent"-->
<!--                            app:layout_constraintRight_toRightOf="parent" />-->

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>